agregar index del menu

--- a/segundohtml.html
+++ b/segundohtml.html
@@ -18,6 +18,19 @@
         visto en clase, para asi poder sacar una excelente nota. </br>
         </p>
 
+        <h2 id="educacion">Educación</h2>
+        <ul>
+            <li>
+                <strong>Primaria:</strong> Estancia school </br>
+                <strong>Año:</strong> Bastantes Años Atras. ;P
+            </li>
+            <li>
+                <strong>Secundaria:</strong> Estancia school </br>
+                <strong>Año:</strong> Bastantes Años Atras. ;P                
+            </li>
+        </ul>
+        <a href="https://www.unicah.edu/" target="_blank">Unicah</a>
+
     </body>
 </html>
 
